--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
                 <div class="row">Please Search a City Name</div>
                 <div class="row">
                     <div>
-                        <input type="text" class="city-name">
-                        <button>Search</button>
+                        <input type="text" class="city-name" id="searchCityName">
+                        <button onclick="weatherSearch()">Search</button>
                     </div>
                 </div>
-                <div class="row hist-1">City 1</div>
-                <div class="row hist-2">City 2</div>
-                <div class="row hist-3">City 3</div>
-                <div class="row hist-4">City 4</div>
-                <div class="row hist-5">City 5</div>
-                <div class="row hist-6">City 6</div>
-                <div class="row hist-7">City 7</div>
-                <div class="row hist-8">City 8</div>
-                <div class="row hist-9">City 9</div>
-                <div class="row hist-10">City 10</div>
+                <div class="row"><button class="city-button" id="#hist-1"></button></div>
+                <div class="row"><button class="city-button" id="#hist-2"></button></div>
+                <div class="row"><button class="city-button" id="#hist-3"></button></div>
+                <div class="row"><button class="city-button" id="#hist-4"></button></div>
+                <div class="row"><button class="city-button" id="#hist-5"></button></div>
+                <div class="row"><button class="city-button" id="#hist-6"></button></div>
+                <div class="row"><button class="city-button" id="#hist-7"></button></div>
+                <div class="row"><button class="city-button" id="#hist-8"></button></div>
+                <div class="row"><button class="city-button" id="#hist-9"></button></div>
+                <div class="row"><button class="city-button" id="#hist-10"></button></div>
             </div>
             <div class="col-9">
                 <div class="row">Box 2</div>
@@ -47,6 +47,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="./assets/js/myjs.js">
+    </script>
 </body>
 
 </html>
