--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-3 city-selector">
+            <div class="col-3 city-selector col-offset-2">
                 <div class="row">Please Search a City Name</div>
                 <div class="row">
                     <div>
@@ -32,8 +32,12 @@
                 <div class="row"><button class="city-button" id="#hist-9"></button></div>
                 <div class="row"><button class="city-button" id="#hist-10"></button></div>
             </div>
-            <div class="col-9">
-                <div class="row">Box 2</div>
+            <div class="col-9 col-offset-2">
+                <div class="row">
+                    <div class="row">
+                        Sample City Name
+                    </div>
+                </div>
                 <div class="row">Box 3</div>
             </div>
         </div>
