--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-3 city-selector col-offset-2">
+        <div class="row justify-content-center banner">
+            <h1>Weather Dashboard</h1>
+        </div>
+        <div class="row border-format">
+            <div class="col-3 city-selector justify-content-center">
                 <div class="row">Please Search a City Name</div>
                 <div class="row">
                     <div>
@@ -38,7 +41,7 @@
                         Sample City Name
                     </div>
                 </div>
-                <div class="row">Box 3</div>
+                <div class="row">5 Day Forecast</div>
             </div>
         </div>
     </div>
