--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             <h1>Weather Dashboard</h1>
         </div>
         <div class="row border-format justify-content-center">
-            <div class="col-3 primary-content ahem justify-content-center">
+            <div class="col-3 primary-content fix-margin justify-content-center">
                 <div class="row justify-content-center">Please Search a City Name</div>
                 <div class="row justify-content-center">
                     <div>
                         <input type="text" class="city-name" id="searchCityName">
 
-                        <button onclick="findCityName()">Search</button>
+                        <button onclick="findCityName()">&#128270;</button>
                     </div>
                 </div>
-                <div class="ahem">
+                <div class="fix-margin">
                     <div class="row justify-content-center"><button class="city-button" id="hist-1"></button></div>
                     <div class="row justify-content-center"><button class="city-button" id="hist-2"></button></div>
                     <div class="row justify-content-center"><button class="city-button" id="hist-3"></button></div>
@@ -36,10 +36,10 @@
                     <div class="row justify-content-center"><button class="city-button" id="hist-8"></button></div>
                     <div class="row justify-content-center"><button class="city-button" id="hist-9"></button></div>
                     <div class="row justify-content-center"><button class="city-button" id="hist-10"></button></div>
-                    <div class="row justify-content-center"><button class="city-button clear" id="hist-10">Clear History</button></div>
+                    <div class="row justify-content-center"><button class="clear" id="hist-10">Clear History</button></div>
                 </div>
             </div>
-            <div class="col-8 .border-format ahem">
+            <div class="col-8 .border-format fix-margin">
                 <div class="row primary-content">
                     <div class="col-12">
                         <div class="row">
